# ChatAnvil

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt
examples/: basic_chat.py  chat_with_parser.py
model/: chat.py
model/claude/: ClaudeChat.py
model/groq/: GroqChat.py
model/ollama/: OllamaChat.py
model/openai/: OpenAiChat.py
src/chat_base/: __init__.py
src/chat_base/core/: chat.py  config.py
src/chat_base/parsers/: __init__.py  base.py  default.py  json_parser.py  markdown.py  xml_parser.py
src/chat_base/providers/: base.py
src/chat_base/providers/claude/: provider.py
src/chat_base/providers/groq/: provider.py
src/chat_base/providers/ollama/: __init__.py  provider.py
src/chat_base/utils/: logging.py
src/chatanvil/: __init__.py
src/chatanvil/core/: __init__.py  chat.py  config.py
src/chatanvil/parsers/: README.md  __init__.py  base.py  default.py  factory.py  json_parser.py  markdown.py  xml_parser.py
src/chatanvil/providers/: base.py
src/chatanvil/providers/claude/: __init__.py  provider.py
src/chatanvil/providers/groq/: __init__.py  provider.py
src/chatanvil/providers/ollama/: __init__.py  provider.py
src/chatanvil/providers/openai/: __init__.py  provider.py
src/chatanvil/providers/openrouter/: __init__.py  provider.py
src/chatanvil/utils/: logging.py  project.py  retry.py
tests/: conftest.py  test_chat.py
tests/test_parsers/: test_json_parser.py  test_markdown_parser.py
tests/test_providers/: test_claude.py  test_groq.py  test_ollama.py  test_openai.py
tests/test_utils/: test_logging.py  test_retry.py
