[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatanvil"
version = "0.1.0"
description = "A flexible chat interface library supporting multiple AI providers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["chat", "ai", "openai", "claude", "groq", "ollama"]
authors = [
    { name = "codegass", email = "wchweichenhao@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai>=1.40.0",
    "anthropic>=0.5.0",
    "groq>=0.10.0",
    "ollama>=0.4.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.hatch.build]
packages = ["src/chatanvil"]
include = [
    "src/chatanvil/**/*",
    "README.md",
    "LICENSE",
    ".env.example"
]

[tool.hatch.build.targets.wheel]
packages = ["src/chatanvil"]
sources = ["src"]

[tool.hatch.version]
path = "src/chatanvil/__init__.py"
